# lightweight_ds_cookie

./: .gitignore  README.md  cookiecutter.json  environment.yml
hooks/: post_gen_project.sh  pre_gen_project.py
{{cookiecutter.project_slug}}/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  makefile  setup.cfg  tasks.py
{{cookiecutter.project_slug}}/src/: __init__.py
{{cookiecutter.project_slug}}/src/data/: __init__.py
{{cookiecutter.project_slug}}/src/models/: __init__.py
{{cookiecutter.repo_name}}/: .flake8  .gitignore  README.md  makefile  setup.py
{{cookiecutter.repo_name}}/Docs/: mkdocs.yml
{{cookiecutter.repo_name}}/Documentation/: mkdocs.yml
{{cookiecutter.repo_name}}/Documentation/docs/: about.md  index.md
{{cookiecutter.repo_name}}/src/: config.py
{{cookiecutter.repo_name}}/src/data/: __init__.py
{{cookiecutter.repo_name}}/src/models/: __init__.py
{{cookiecutter.repo_name}}/src/visualisation/: __init__.py
