[flake8]
exclude = 
    .git,
    __pycache__,
    .pytest_cache,
    .mpypy_cache,
    docs,
    site,
    .nox,
    *.egg,
    *.egg-info,
    build
max-complexity = 10
max-line-length = 88
extend-ignore =
    E203, # Black compatability: whitespace before :
    W503, # Black compatability: line break before binary operator

[isort]
# Added for compatability with black
profile = black
multi_line_output = 3


[mypy]
# Ignore for 3rd party packages without type info
ignore_missing_imports = True

[metadata]
description-file = README.md
license_file = LICENSE